fixed portfolio tab and alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,12 @@ header {
     margin-left: 80px;
 }
 
+h1 {
+    color: #4aaaa5;
+    border-bottom: solid #dddddd 3px;
+    padding-bottom: 20px;
+}
+
 nav {
     float: right;
     padding: 10px;
@@ -49,24 +55,6 @@ ul {
     color: #dddddd;
 }
 
-form {
-    color: #777777;
-}
-
-input, textarea {
-    width: 950px;
-	padding: 10px;
-    border-color: #dddddd;
-    border-style: solid;
-    border-width: thin;
-}  
-
-h1 {
-    color: #4aaaa5;
-    border-bottom: solid #dddddd 3px;
-    padding-bottom: 20px;
-}
-
 .content {
     border-style: solid;
     border-width: 1px;
@@ -78,11 +66,17 @@ h1 {
     margin: auto;
 }
 
+body {
+    margin: auto;
+    background-image: url(../images/concrete_seamless.png);
+    text-align: left;
+    font-family: arial, Arial, Helvetica, sans-serif;
+    line-height: 30px;
+}
 
 header, h1, h2, h3 {
     font-family: 'Gerorgia', Times, 'Times New Roman', serif;
 }
-
 
 footer {
     background-color: #666666;
@@ -95,35 +89,30 @@ footer {
     margin-top: 100px;
 }
 
-img {
+form {
+    color: #777777;
+}
+
+input, textarea {
+    width: 950px;
+	padding: 10px;
+    border-color: #dddddd;
+    border-style: solid;
+    border-width: thin;
+}  
+
+.bio {
     width: 250px;
     height: 250px;
     float: left;
     margin-right: 20px
 }
 
-body {
-    margin: auto;
-    background-image: url(../images/concrete_seamless.png);
-    text-align: left;
-    font-family: arial, Arial, Helvetica, sans-serif;
-    line-height: 30px;
-}
-
-.name {
-    float: left;
-	position: relative;
-	top: -50px;
-	width: 100%;
-	height: 30px;
-	background-color: #4aaaa5;
-	color: #ffffff;
-	text-align: center;
-}
-
 .image {
     width: 250px;
     height: 200px;
+    padding: 0%;
+    margin: 0%
 }
 
 .box-set {
@@ -156,4 +145,15 @@ body {
 .box-5 {
     left: 300px;
     top: 250px;
+}
+
+span {
+    float: left;
+	position: relative;
+	top: -50px;
+	width: 100%;
+	height: 30px;
+	background-color: #4aaaa5;
+	color: #ffffff;
+	text-align: center;
 }
